Fix header z-index + card height

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -167,7 +167,7 @@
       }
 
       .Lab__home__introSlider__cardItem__card {
-        height: pxToRem(344px);
+        height: pxToRem(400px);
         box-shadow: 0 pxToRem(20px) pxToRem(20px) 0 rgba(0, 0, 0, 0.05);
       }
 
